Bugfix: halftime sign didn't play when rest time was 0. Testing reapInterval for session cleaning

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 NODE_ENV=development
 #PUBLIC_URL=site.com
 SECRET=secret-token
+# 3600 seconds = one hour
 SESSION_TIMEOUT_SECONDS=3600
 #DB_NAME=database-name
 #DB_PASS=secret-database-password
